k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dental-service
spec:
  type: LoadBalancer
  selector:
    app: dental
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
