k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dental-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:213305225628:certificate/456a7943-0402-43f9-9a43-bd66e4fdc9d7
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - host: api.tbogs.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dental-service
                port:
                  number: 80
